@@ -1,6 +1,6 @@
 /*
  * Modern UI.
- * Copyright (C) 2019-2021 BloCamLimb. All rights reserved.
+ * Copyright (C) 2021-2025 BloCamLimb. All rights reserved.
  *
  * Modern UI is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -39,6 +39,7 @@ import icyllis.modernui.annotation.Nullable;
 import icyllis.modernui.graphics.text.GetChars;
 import it.unimi.dsi.fastutil.ints.IntArrays;
 import it.unimi.dsi.fastutil.objects.ObjectArrays;
+import it.unimi.dsi.fastutil.objects.Reference2IntOpenHashMap;
 
 import java.util.*;
 import java.util.stream.IntStream;
@@ -57,6 +58,13 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
     private Object[] mSpans;
     private int[] mSpanData;
     private int mSpanCount;
+
+    // Modern UI added:
+    // when span count is less than 16, linear search is faster and has a small footprint;
+    // otherwise, use open-addressing hash map to handle a large number of spans
+    private static final int HASHING_THRESHOLD = 16;
+    @Nullable
+    private Reference2IntOpenHashMap<Object> mIndexOfSpan;
 
     // Modern UI changed: optimize substring, never copy NoCopySpan,
     // never copy PARAGRAPH span if not at paragraph boundary
@@ -136,13 +144,16 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
         if (count == 0) return;
 
         if (!hasNoCopySpan && start == 0 && end == src.length()) {
-            // Also trim the array to size
+            // Modern UI: also trim the array to size
             assert count == src.mSpanCount;
             mSpanCount = src.mSpanCount;
             mSpans = new Object[mSpanCount];
             mSpanData = new int[mSpans.length * COLUMNS];
             System.arraycopy(src.mSpans, 0, mSpans, 0, mSpans.length);
             System.arraycopy(src.mSpanData, 0, mSpanData, 0, mSpanData.length);
+            if (src.mIndexOfSpan != null) {
+                mIndexOfSpan = new Reference2IntOpenHashMap<>(src.mIndexOfSpan);
+            }
         } else {
             mSpans = new Object[count];
             mSpanData = new int[mSpans.length * COLUMNS];
@@ -155,7 +166,7 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
                         || (srcSpans[i] instanceof NoCopySpan)) {
                     continue;
                 }
-                // Added paragraph boundary check
+                // Modern UI added: paragraph boundary check
                 if ((spanFlags & Spannable.SPAN_PARAGRAPH) == Spannable.SPAN_PARAGRAPH) {
                     if (isIndexFollowsNextLine(spanStart) || isIndexFollowsNextLine(spanEnd)) {
                         continue;
@@ -174,6 +185,13 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
             }
             assert j <= count;
             mSpanCount = j;
+            if (j > HASHING_THRESHOLD) {
+                mIndexOfSpan = new Reference2IntOpenHashMap<>(j);
+                mIndexOfSpan.defaultReturnValue(-1);
+                for (int i = 0; i < j; i++) {
+                    mIndexOfSpan.put(mSpans[i], i);
+                }
+            }
         }
     }
 
@@ -224,25 +242,34 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
             }
         }
 
-        int count = mSpanCount;
-        Object[] spans = mSpans;
-        int[] data = mSpanData;
+        final int count = mSpanCount;
+        final Object[] spans = mSpans;
+        final int[] data = mSpanData;
 
-        // send is false only in constructor, so the whole block can be skipped
+        // send is false only in constructor, we assume there are no duplicate span objects,
+        // so not only sendSpanChanged can be skipped, the whole block can be skipped
         if (send) {
-            for (int i = 0; i < count; i++) {
-                if (spans[i] == span) {
-                    int ic = i * COLUMNS;
-                    int ost = data[ic + START];
-                    int oen = data[ic + END];
-
-                    data[ic + START] = start;
-                    data[ic + END] = end;
-                    data[ic + FLAGS] = flags;
-
-                    sendSpanChanged(span, ost, oen, start, end);
-                    return;
+            int i;
+            if (mIndexOfSpan != null) {
+                i = mIndexOfSpan.getInt(span);
+            } else {
+                for (i = count - 1; i >= 0; i--) {
+                    if (spans[i] == span) {
+                        break;
+                    }
                 }
+            }
+            if (i != -1) {
+                int ic = i * COLUMNS;
+                int ost = data[ic + START];
+                int oen = data[ic + END];
+
+                data[ic + START] = start;
+                data[ic + END] = end;
+                data[ic + FLAGS] = flags;
+
+                sendSpanChanged(span, ost, oen, start, end);
+                return;
             }
         }
 
@@ -273,6 +300,15 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
         mSpanData[ic + END] = end;
         mSpanData[ic + FLAGS] = flags;
         mSpanCount++;
+        if (mIndexOfSpan != null) {
+            mIndexOfSpan.put(span, count);
+        } else if (mSpanCount > HASHING_THRESHOLD) {
+            mIndexOfSpan = new Reference2IntOpenHashMap<>(mSpanCount);
+            mIndexOfSpan.defaultReturnValue(-1);
+            for (int i = 0; i < mSpanCount; i++) {
+                mIndexOfSpan.put(mSpans[i], i);
+            }
+        }
 
         if (send) {
             sendSpanAdded(span, start, end);
@@ -284,25 +320,42 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
         final Object[] spans = mSpans;
         final int[] data = mSpanData;
 
-        for (int i = count - 1; i >= 0; i--) {
-            if (spans[i] == span) {
-                int ost = data[i * COLUMNS + START];
-                int oen = data[i * COLUMNS + END];
-
-                int c = count - (i + 1);
-
-                if (c != 0) {
-                    System.arraycopy(spans, i + 1, spans, i, c);
-                    System.arraycopy(data, (i + 1) * COLUMNS,
-                            data, i * COLUMNS, c * COLUMNS);
+        // Modern UI changed:
+        int i;
+        if (mIndexOfSpan != null) {
+            i = mIndexOfSpan.removeInt(span);
+        } else {
+            for (i = count - 1; i >= 0; i--) {
+                if (spans[i] == span) {
+                    break;
                 }
+            }
+        }
 
-                mSpanCount--;
+        if (i != -1) {
+            int ost = data[i * COLUMNS + START];
+            int oen = data[i * COLUMNS + END];
 
-                if ((flags & Spanned.SPAN_INTERMEDIATE) == 0) {
-                    sendSpanRemoved(span, ost, oen);
+            int c = count - (i + 1);
+
+            if (c != 0) {
+                System.arraycopy(spans, i + 1, spans, i, c);
+                System.arraycopy(data, (i + 1) * COLUMNS,
+                        data, i * COLUMNS, c * COLUMNS);
+            }
+
+            mSpanCount--;
+            // Modern UI added: also null out reference to avoid leak
+            spans[mSpanCount] = null;
+            // Modern UI changed:
+            if (mIndexOfSpan != null) {
+                for (int j = i; j < mSpanCount; j++) {
+                    mIndexOfSpan.put(spans[j], j);
                 }
-                return;
+            }
+
+            if ((flags & Spanned.SPAN_INTERMEDIATE) == 0) {
+                sendSpanRemoved(span, ost, oen);
             }
         }
     }
@@ -383,7 +436,7 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
         } else {
             assert found == 1;
             assert first != null;
-            return List.of(first);
+            return Collections.singletonList(first);
         }
     }
 
@@ -444,35 +497,45 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
         return !dest.isEmpty();
     }
 
+    // Modern UI added:
+    private int indexOfSpan(@NonNull Object span) {
+        int i;
+        if (mIndexOfSpan != null) {
+            i = mIndexOfSpan.getInt(span);
+        } else {
+            final Object[] spans = mSpans;
+            for (i = mSpanCount - 1; i >= 0; i--) {
+                if (spans[i] == span) {
+                    break;
+                }
+            }
+        }
+        return i;
+    }
+
     @Override
     public int getSpanStart(@NonNull Object span) {
-        final Object[] spans = mSpans;
-        for (int i = mSpanCount - 1; i >= 0; i--) {
-            if (spans[i] == span) {
-                return mSpanData[i * COLUMNS + START];
-            }
+        int i = indexOfSpan(span);
+        if (i != -1) {
+            return mSpanData[i * COLUMNS + START];
         }
         return -1;
     }
 
     @Override
     public int getSpanEnd(@NonNull Object span) {
-        final Object[] spans = mSpans;
-        for (int i = mSpanCount - 1; i >= 0; i--) {
-            if (spans[i] == span) {
-                return mSpanData[i * COLUMNS + END];
-            }
+        int i = indexOfSpan(span);
+        if (i != -1) {
+            return mSpanData[i * COLUMNS + END];
         }
         return -1;
     }
 
     @Override
     public int getSpanFlags(@NonNull Object span) {
-        final Object[] spans = mSpans;
-        for (int i = mSpanCount - 1; i >= 0; i--) {
-            if (spans[i] == span) {
-                return mSpanData[i * COLUMNS + FLAGS];
-            }
+        int i = indexOfSpan(span);
+        if (i != -1) {
+            return mSpanData[i * COLUMNS + FLAGS];
         }
         return 0;
     }
@@ -557,15 +620,21 @@ abstract sealed class SpannableStringInternal implements Spanned, GetChars
     // Same as SpannableStringBuilder
     @Override
     public boolean equals(Object o) {
-        if (o instanceof final Spanned other &&
-                toString().equals(o.toString())) {
+        if (o instanceof final Spanned other) {
+            // Modern UI changed:
+            if (other instanceof SpannableStringInternal) {
+                if (!mText.equals(other.toString())) {
+                    return false;
+                }
+            } else {
+                if (!mText.contentEquals(other)) {
+                    return false;
+                }
+            }
             // Check span data
             final List<?> otherSpans = other.getSpans(0, other.length(), Object.class);
             final List<?> spans = getSpans(0, length(), Object.class);
-            if (otherSpans.isEmpty() && spans.isEmpty()) {
-                return true;
-            } else if (!otherSpans.isEmpty() && !spans.isEmpty() &&
-                    otherSpans.size() == spans.size()) {
+            if (otherSpans.size() == spans.size()) {
                 // Do not check mSpanCount anymore for safety
                 for (int i = 0; i < spans.size(); ++i) {
                     final Object span = spans.get(i);
